--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,17 @@
         </div>
 
         <div class="form-group">
+            <label>Breed</label>
+            <input type="text" id="breed" required>
+        </div>
+
+
+        <div class="form-group">
+            <label>Price</label>
+            <input type="number" id="price" required>
+        </div>
+
+        <div class="form-group">
             <label>Gender</label>
             <label><input type="radio" name="gender" value="male" required> Male</label>
             <label><input type="radio" name="gender" value="female"> Female</label>
